--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -2,4 +2,4 @@ home = /usr/bin
 include-system-site-packages = false
 version = 3.11.3
 executable = /usr/bin/python3.11
-command = /usr/bin/python -m venv /home/cdnjmusic/Documents/Python Go App/To-Do-List
+command = /usr/bin/python -m venv /home/cdnjmusic/Documents/GitHub/To-Do-List
